# chattor

./: CHANGES.md  CMakeLists.txt  LICENSE.md  README.md  debug.sconscript.py  release.sconscript.py  sconstruct  sconstruct.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: BUG-REPORT.md  BUG-REPORT.yml  FEATURE-REQUEST.md  FEATURE-REQUEST.yml  QUESTION.yml  TRANSLATION.yml  config.yml
.github/PULL_REQUEST_TEMPLATE/: pr.md
.github/workflows/: package.yml  validate.yml
docs/: CNAME  cla.md  clients.md  conduct.md  contact.md  contributing.md  index.md  modlog.md
docs/api/: index.md
docs/protocol/: index.md
src/client/: main.c
src/include/: chattor.h
src/lib/: lib.c
src/test/: add1.c  add2.c  all-tests.c  driver.h  main.c  main.h  test.c  unit-driver.h
